infra/k3s/ingress/middleware-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware
  namespace: default
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "https://your-domain.com"
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
    accessControlMaxAge: 3600
    addVaryHeader: true
